# story-generator

./: .gitmodules  CMakeLists.txt  Makefile  Makefile.am  README.md  configure.ac  cstuff  dub.json  dub.mk  dub.selections.json  example_commit_tree.dot  html_when  htmlish  libxml2  libxmlfixes  log.css  main.mk  note.c  setup.sh
derp/: dub.json
derp/source/: fuck_selectors.d  htmlderp.d  htmlish.d
failderp/source/: app.d  htmlderp.d
failderp/views/template/: contents.xhtml
html-when/: dub.json
html-when/source/: app.d  html_when.d
html_when/: Makefile  README.md  dub.json  test-example.html
html_when/source/: app.c  ensure.h  fuck_selectors.d  html_when.c  html_when.d  html_when.h  output.c  output.h  print.d  selectors.c  selectors.h  test.d
html_when/views/: test-example.html
notes/: embedded_dynamic_pages.txt
source/: .editorconfig  app.d  arrayhax.d  backend.d  create.c  create.h  db.c  db.d  db.h  db.sql  ddate-stub.c  ddate.d  ensure.h  feed.d  fixblobs.d  fuck_selectors.d  git.c  git.d  git.h  hax.d  htmlderp.d  htmlish.d  import.sql  iter.d  main.c  make-db_oid.c  make-sql.c  note.c  note.h  ordered_map.d  print.d  reindex.d  repo.c  repo.h  sort.template.c  sqlite.d  sqlite3.d  storygit.c  storygit.h  string.h  (+2 more)
source/cross/: iter.d  range.d  searching.d
source/db_oid/: base.h  custom.h  make.c  same.h
source/makers/: birthverse.d  littlepip.d  package.d
src/: categories.list  create.c  create.h  db-private.h  db.c  db.h  db.sql  db.sql.stmt  describe.c  find-chapters-to-publish.c  import.sql  indexes.sql  itoa.c  itoa.h  list-commits.c  main.c  make-contents.c  make-log.c  make-log.template.html  make-sql.c  mystring.h  news-log.c  note.c  note.h  ready.c  repo.c  schema.sql  set-censored.c  statements2source.c  statements2source.template.c  storydb.c  storydb.h  storygit.c  storygit.h  test_git.c  upgrade.sql
src/db_oid/: base.h  custom.h  make.c  same.h
src/makers/: package.d
template/: contents-body.html  contents-story.html  make-log.html  make-log.row.html  news-log.html  news-log.row.html  page.html  statements2source.c
views/: schema.sql
views/template/: birthverse.xhtml  chapter.xhtml  contents.xhtml  default.html
